--- a/Alert/res/layout/news_items.xml
+++ b/Alert/res/layout/news_items.xml
@@ -9,6 +9,7 @@
     <TextView
         android:id="@+id/titleText"
         android:layout_width="fill_parent"
+        android:layout_height="match_parent"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:textColor="@color/textColor" />
