--- a/Alert/res/layout/news_items.xml
+++ b/Alert/res/layout/news_items.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/titleText"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="8dip"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:textColor="@color/textColor" />
